<resources>
    <string name="app_name">SIMABF</string>
    <string name="versionTitle">Version N° %1$d.%2$d </string>
    <string name="request_sell_offer">Demande offre de vente</string>
    <string name="request_buy_offer">Demande offre d\'achat</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running %s</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="base_url">http://10.0.2.2:9191/</string>
    <string name="miseAJourBD">Mise à jour</string>
    <string name="title_activity_dbupdater">DBUpdater</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Toujours</item>
        <item>Si possible</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="modePaiement">
        <item>Cash</item>
        <item>Virement</item>
        <item>Carte de crédit</item>
        <item>Mobile</item>
    </string-array>
    <string-array name="qualities">
        <item>Haute</item>
        <item>Moyenne</item>
        <item>Basse</item>
    </string-array>
    <string name="pref_header_data_sync">Données &amp; synchronisation</string>
    <string name="pref_header_data">Données</string>
    <string name="pref_header_sync">Réinitialisation</string>
    <string name="pref_title_sync_frequency">Fréquence de synchronisation</string>
    <string-array name="currency_titles">
        <item>FCFA</item>
        <item>CEDI</item>
        <item>EURO</item>
        <item>Dollard</item>
    </string-array>
    <string-array name="currency_Values">
        <item>FCFA</item>
        <item>CEDI</item>
        <item>EURO</item>
        <item>Dollard</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>24 heures</item>
        <item>3 jours</item>
        <item>7 jours</item>
        <item>30 jours</item>
        <item>90 jours</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1440</item>
        <item>4320</item>
        <item>10080</item>
        <item>43200</item>
        <item>129600</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">SIMABF </string>
    <string name="action_settings">Paramètres</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">Fragment One</string>
    <string name="fragmentTwo">Fragment Two</string>
    <string name="fragmentThree">Fragment Three</string>
    <string name="search_title">Chercher</string>
    <string name="action_search">Chercher</string>
    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="nav_item_home">Accueil</string>
    <string name="nav_item_friends">Amis</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="nav_item_produits">Produits</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_produits</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Amis</string>
    <string name="title_home">Accueil</string>
    <string name="title_produits">Produits</string>
    <string name="accueil">Accueil</string>
    <string name="amis">Amis</string>
    <string name="messages">Messages</string>
    <string name="produits">Produits</string>
    <string name="hello_world">Hello world!</string>
    <string name="prix">Prix</string>
    <string name="offres">Offres</string>
    <string name="stocks">Stocks</string>
    <string name="infos">Infos</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="action_previous">Précédent</string>
    <string name="action_next">Suivant</string>
    <string name="action_finish">Terminer</string>
    <string name="MAJBase">Mise à jour Base</string>
    <string name="confirmMaJBase">Confirmation Mise à jour de la base</string>
    <string name="AttentionInitialisationBD">Confirmez-vous l\'actualisation des paramètres de SIMABF ?</string>
    <string name="AttentionSuppressionBD">Attention cette action va supprimer les paramètres de SIMABF, confirmez-vous ?</string>
    <string name="yesBtn">OUI</string>
    <string name="NoBtn">NON</string>
    <string name="labelMarche">Marché :</string>
    <string name="veuillezSaisirLeMarche">Veuillez saisir le marché</string>
    <string-array name="planets_array">
        <item>Kg</item>
        <item>g</item>
        <item>Yor</item>
    </string-array>
    <string-array name="paymentMode">
        <item>Especes</item>
        <item>Chèque marchand</item>
        <item>transfert bancaire</item>
        <item>Check ou carte de credit</item>
        <item>Non Applicable</item>
    </string-array>
    <string-array name="typeOffre">
        <item>Achat</item>
        <item>Vente</item>
    </string-array>
    <string name="sortable_indicator_content_description">Sortable Indicator</string>
    <string name="title_car_activity">SortableTableView Example</string>
    <string name="default_text_ps">180PS</string>
    <string name="separator">/</string>
    <string name="default_text_kws">120kW</string>
    <string name="car_producer_image_content_description">Car Producer</string>
    <string name="saisie_prix_etape1"><![CDATA[Saisie des prix - Etape &#189;]]></string>
    <string name="saisie_prix_etape2">Saisie des prix - Etape 2/2</string>
    <string name="saisie_prix">Saisie des prix</string>
    <string name="prix_de_gros_detail">Prix (gros/détail) :</string>
    <string name="prix_detail">Prix de détail :</string>
    <string name="btnValider">Valider</string>
    <string name="commentaire">Commentaire :</string>
    <string name="produitLabel">Produit :</string>
    <string name="action_send">Envoyer :</string>
    <string name="produits_title">Produits</string>
    <string name="depots_title">Depots</string>
    <string name="marches_title">Marchés</string>
    <string name="parametres">Paramètres</string>
    <string name="aide">Aide</string>
    <string name="quantityLabel">Quantité</string>
    <string name="formatDate">dd/MM/yyyy</string>
    <string name="notes">Notes</string>
    <string name="LienUrl">Lien URL</string>
    <string name="date_info">Date de l\'info</string>
    <string name="date_expiration">Date Expiration</string>
    <string name="telephone_auteur">Téléphone Auteur</string>
    <string name="titre">Titre</string>
    <string name="translate_button_text">Translate</string>
    <string name="phoneword_label_text">Enter a phoneword:</string>
    <string name="default_text">1–855-ANDROID</string>
    <string name="call_button_text">Call</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_translate_log">Call Log</string>
    <string name="call_log_button_text">Call Log</string>
    <string name="call_log_list_text">Numbers Called:</string>
    <string name="action_call_log">Call Log</string>
    <string name="saisieNotesDeMarche">SAISIE DES NOTES</string>
    <string name="prendreUnePhoto">Prendre une photo</string>
    <string name="saisie_des_infos">Saisie des informations</string>
    <string name="saisie_des_prix">Saisie des prix</string>
    <string name="saisie_des_offres">Saisie des offres</string>
    <string name="saisie_des_stocks">Saisie des stocks</string>
    <string name="liste_des_infos">Liste des informations</string>
    <string name="liste_des_offres_vente">Liste des offres de vente</string>
    <string name="mise_a_jour_GPS">Acquisition coordonnées GPS</string>
    <string name="veuillezPatienter">Veuillez patienter quelques secondes</string>
    <string name="note">Note</string>
    <string name="photo_label">Photo - cliquez sur l\'image pour changer Taille maximum ->5mo </string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="descriptionNote">Image descriptive de la note</string>
    <string name="prix_label">Prix </string>
    <string name="stock_label">Stocks</string>
    <string name="offre_de_vente">Offres de vente</string>
    <string name="offre_d_achat">Offres d\'achat</string>
    <string name="demandes">Requêtes</string>
    <string name="listes">Listes</string>
    <string name="register_label">Enregistrer</string>
    <string name="partenaires">Partenaires</string>
    <string name="conseil_reduction_taille_image">Pour réduire la taille des images capturées et consommer moins de méga-octets à la mise en ligne, vous devez diminuer la résolution de votre appareil photo à moins de 3M(16:9)</string>
    <string name="conseil_label">Astuce :</string>
    <string name="appVersionName">Version 1</string>
    <string name="appName">SIMABF</string>
    <string name="appwebsite">plateforme web : https://sima-bf.net</string>
    <string name="d_tail_produit">Détail Produit</string>
    <string name="image">image</string>
    <string name="nom">Nom :</string>
    <string name="nom_scientifique">Nom Scientifique :</string>
    <string name="mesure_par_d_faut">Mesure par défaut :</string>
    <string name="actualiser">Actualiser</string>
    <string name="se_reconnecter">Se reconnecter</string>
    <string name="fermer">Fermer</string>
    <string name="code">Code :</string>
    <string name="categorie">Catégorie :</string>
    <string name="marche_titre">Marché :</string>
    <string name="geolocaliser_marche">Géolocaliser les Marchés</string>
    <string name="geolocaliser_depot">Géolocaliser les Dépôts</string>
    <string name="etalonnage">Etalonnage</string>
</resources>