<?xml version="1.0" encoding="utf-8"?>
<com.tiramakan.simabf.ui.view.widgets.MyDashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/dashboardFrame"
    android:background="@android:color/transparent"

    android:layout_height="fill_parent" >
    <!--android:background="@color/dashboard_color"-->
    <androidx.appcompat.widget.AppCompatButton android:id="@+id/dashboard_prix"
        style="@style/MyDashboardButton"
        android:text="@string/prix"
        android:drawableTop="@mipmap/prix" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/dashboard_offre_achat"
        style="@style/MyDashboardButton"
        android:text="@string/offre_d_achat"
        android:drawableTop="@mipmap/offre_achat" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/dashboard_offre_vente"
        style="@style/MyDashboardButton"
        android:text="@string/offre_de_vente"
        android:drawableTop="@mipmap/offre_vente" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/dashboard_stocks"
        style="@style/MyDashboardButton"
        android:text="@string/stock_label"
        android:drawableTop="@mipmap/stocks" />




</com.tiramakan.simabf.ui.view.widgets.MyDashboardLayout>
